--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
-[Bb]uild/
+#[Bb]uild/
 [Bb]uilds/
 Assets/AssetStoreTools*
 
@@ -32,8 +32,8 @@ ExportedObj/
 sysinfo.txt
 
 # Builds
-*.apk
-*.unitypackage
+#*.apk
+#*.unitypackage
 
 # OSX Things
 *.DS_Store
