--- a/server/docker/docker-compose.yaml
+++ b/server/docker/docker-compose.yaml
@@ -3,9 +3,6 @@ version : "2"
 networks:
   pysock:
 
-volumes:
-  webglbuild:
-
 services:
   websocket:
     build:
@@ -20,7 +17,7 @@ services:
     image: nginx:1.14
     volumes:
       - ./nginx-server/nginx.conf:/etc/nginx/conf.d/mysite.template
-      - webglbuild:/etc/nginx/html/
+      - ../../CSCE315Project2/build/:/etc/nginx/html/
     ports:
       - 8080:8080
     command: /bin/bash -c "envsubst '$${API_LOCATION},$${UI_LOCATION}' < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
@@ -33,7 +30,6 @@ services:
     image: gableroux/unity3d:latest
     volumes: 
       - ../../CSCE315Project2:/root/project
-      - webglbuild:/root/project/build/
       - ./unity/Unity_v2018.x.ulf:/root/.local/share/unity3d/Unity/Unity_lic.ulf
     environment:
       - TEST_PLATFORM=linux
