--- a/server/docker/nginx-server/nginx.conf
+++ b/server/docker/nginx-server/nginx.conf
@@ -10,6 +10,10 @@ upstream api {
 server {
     listen 8080;
 
+    location / {
+        root html/;
+    }
+
     location = /AAAAA {
         proxy_pass http://api;
 
