--- a/server/docker/docker-compose.yaml
+++ b/server/docker/docker-compose.yaml
@@ -3,6 +3,9 @@ version : "2"
 networks:
   pysock:
 
+volumes: 
+  webglbuild:
+
 services:
   websocket:
     build:
@@ -17,7 +20,7 @@ services:
     image: nginx:1.14
     volumes:
       - ./nginx-server/nginx.conf:/etc/nginx/conf.d/mysite.template
-      - ../../CSCE315Project2/build/:/etc/nginx/html/
+      - webglbuild:/etc/nginx/html/
     ports:
       - 8080:8080
     command: /bin/bash -c "envsubst '$${API_LOCATION},$${UI_LOCATION}' < /etc/nginx/conf.d/mysite.template > /etc/nginx/conf.d/default.conf && exec nginx -g 'daemon off;'"
@@ -29,15 +32,13 @@ services:
   unity:
     image: gableroux/unity3d:latest
     volumes: 
-      - ../../CSCE315Project2:/root/project
+      - webglbuild:/root/project/build/
+      - ../../CSCE315Project2:/root/project/
       - ./unity/Unity_v2018.x.ulf:/root/.local/share/unity3d/Unity/Unity_lic.ulf
     environment:
       - TEST_PLATFORM=linux
       - WORKDIR=/root/project
-    command: /opt/Unity/Editor/Unity -nographics -batchmode -quit -logFile stderr.log -projectPath /root/project -executeMethod WebGLBuilder.build
-    ########################### ^ BLACK MAGIC DO NOT TOUCH ^ #############################
-
-    #command: /opt/Unity/Editor/Unity -nographics -batchmode -logFile stderr.log -projectPath /root/project -executeMethod WebGLBuilder.build
+    command: /opt/Unity/Editor/Unity -nographics -batchmode -quit -logFile /root/project/stderr.log -projectPath /root/project -executeMethod WebGLBuilder.build
     #command: xvfb-run --auto-servernum --server-args='-screen 0 640x480x24' /opt/Unity/Editor/Unity -logFile -batchmode -username "$UNITY_USERNAME" -password "$UNITY_PASSWORD"
     #command: xvfb-run --auto-servernum --server-args='-screen 0 640x480x24' /opt/Unity/Editor/Unity -nographics -batchmode -quit -logFile stderr.log -projectPath /root/project -executeMethod WebGLBuilder.build
 
