Fixed some server errors to stabalize rooms, added a pos_update field for requests

--- a/docker/nginx-server/nginx.conf
+++ b/docker/nginx-server/nginx.conf
@@ -14,7 +14,7 @@ server {
         root html/;
     }
 
-    location = /AAAAA {
+    location ~ /room/([0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef])$ {
         proxy_pass http://api;
 
         proxy_redirect off;
