--- a/docker/nginx-server/nginx.conf
+++ b/docker/nginx-server/nginx.conf
@@ -3,8 +3,12 @@ map $http_upgrade $connection_upgrade {
     '' close;
 }
 
-upstream api {
-    server websocket:8080;
+upstream wsapi {
+    server roomio:8080;
+}
+
+upstream  httpapi {
+    server roomio:8081;
 }
 
 server {
@@ -14,8 +18,20 @@ server {
         root html/;
     }
 
+    location = /requestroom {
+        proxy_pass http://httpapi;
+
+        proxy_redirect off;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_http_version 1.1;
+    }
+
     location ~ /room/([0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef])$ {
-        proxy_pass http://api;
+        proxy_pass http://wsapi;
 
         proxy_redirect off;
 
