--- a/docker/roomio-server/dockerfile
+++ b/docker/roomio-server/dockerfile
@@ -2,6 +2,13 @@ FROM python:3.7-alpine
 
 WORKDIR /usr/src/app
 
+#Essential builds
+RUN "apk" "add" "g++"
+RUN "apk" "add" "make"
+RUN "apk" "add" "libffi-dev"
+RUN "apk" "add" "openssl-dev"
+
+#Python3 essentials
 COPY requirements.txt ./
 RUN pip3 install --no-cache-dir -r requirements.txt
 
