--- a/docker/nginx-server/nginx.conf
+++ b/docker/nginx-server/nginx.conf
@@ -62,6 +62,18 @@ server {
         proxy_http_version 1.1;
     }
 
+    location = /checkroom {
+        proxy_pass http://roomio:8085;
+
+        proxy_redirect off;
+
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
+        proxy_http_version 1.1;
+    }
+
     location ~ /room/([0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef][0-9abcdef])$ {
         proxy_pass http://wsapi;
 
