--- a/docker/nginx-server/nginx.conf
+++ b/docker/nginx-server/nginx.conf
@@ -8,7 +8,13 @@ upstream wsapi {
 }
 
 server {
+
     listen 0.0.0.0:80;
+
+    #Coverall CORS headers
+    add_header 'Access-Control-Allow-Origin' '*';
+    add_header 'Access-Control-Allow-Methods' 'GET, POST';
+    add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
 
     location / {
         root html/;
