--- a/docker/nginx-server/nginx.conf
+++ b/docker/nginx-server/nginx.conf
@@ -13,14 +13,16 @@ server {
 
     add_header 'Access-Control-Allow-Origin' '*';
 
-    location * {
-        if ($request_method = OPTIONS ) {
-            add_header 'Access-Control-Max-Age' '3628800';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST';
-            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-            return 200;
-        }
+    
+    if ($request_method = OPTIONS ) {
+        add_header Content-Length 0;
+        add_header Content-Type text/plain;
+        add_header 'Access-Control-Max-Age' '3628800';
+        add_header 'Access-Control-Allow-Methods' 'GET, POST';
+        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+        return 200;
     }
+    
 
     location / {
         root html/;
