Fixes to OPTIONS

--- a/docker/nginx-server/nginx.conf
+++ b/docker/nginx-server/nginx.conf
@@ -12,15 +12,6 @@ server {
     listen 0.0.0.0:80;
 
     add_header 'Access-Control-Allow-Origin' '*';
-
-    if ($request_method = OPTIONS ) {
-        add_header Content-Length 0;
-        add_header Content-Type text/plain;
-        add_header 'Access-Control-Max-Age' '3628800';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST';
-        add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
-        return 200;
-    }
     
 
     location / {
@@ -28,6 +19,14 @@ server {
     }
 
     location = /requestroom {
+        if ($request_method = OPTIONS ) {
+            add_header 'Content-Length' '0';
+            add_header 'Content-Type' 'text/plain';
+            add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            return 200;
+        }
         proxy_pass http://roomio:8081;
 
         proxy_redirect off;
@@ -40,6 +39,14 @@ server {
     }
 
     location = /adduser {
+        if ($request_method = OPTIONS ) {
+            add_header 'Content-Length' '0';
+            add_header 'Content-Type' 'text/plain';
+            add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            return 200;
+        }
         proxy_pass http://roomio:8082;
 
         proxy_redirect off;
@@ -52,6 +59,14 @@ server {
     }
 
     location = /getscore {
+        if ($request_method = OPTIONS ) {
+            add_header 'Content-Length' '0';
+            add_header 'Content-Type' 'text/plain';
+            add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            return 200;
+        }
         proxy_pass http://roomio:8083;
 
         proxy_redirect off;
@@ -64,6 +79,14 @@ server {
     }
 
     location = /incscore {
+        if ($request_method = OPTIONS ) {
+            add_header 'Content-Length' '0';
+            add_header 'Content-Type' 'text/plain';
+            add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            return 200;
+        }
         proxy_pass http://roomio:8084;
 
         proxy_redirect off;
@@ -76,6 +99,14 @@ server {
     }
 
     location = /checkroom {
+        if ($request_method = OPTIONS ) {
+            add_header 'Content-Length' '0';
+            add_header 'Content-Type' 'text/plain';
+            add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            return 200;
+        }
         proxy_pass http://roomio:8085;
 
         proxy_redirect off;
@@ -87,6 +118,14 @@ server {
         proxy_http_version 1.1;
     }
     location = /statususer {
+        if ($request_method = OPTIONS ) {
+            add_header 'Content-Length' '0';
+            add_header 'Content-Type' 'text/plain';
+            add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST';
+            add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+            return 200;
+        }
         proxy_pass http://roomio:8086;
 
         proxy_redirect off;
