--- a/docker/nginx-server/nginx.conf
+++ b/docker/nginx-server/nginx.conf
@@ -23,6 +23,7 @@ server {
             add_header 'Content-Length' '0';
             add_header 'Content-Type' 'text/plain';
             add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
             return 200;
@@ -43,6 +44,7 @@ server {
             add_header 'Content-Length' '0';
             add_header 'Content-Type' 'text/plain';
             add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
             return 200;
@@ -63,6 +65,7 @@ server {
             add_header 'Content-Length' '0';
             add_header 'Content-Type' 'text/plain';
             add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
             return 200;
@@ -83,6 +86,7 @@ server {
             add_header 'Content-Length' '0';
             add_header 'Content-Type' 'text/plain';
             add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
             return 200;
@@ -103,6 +107,7 @@ server {
             add_header 'Content-Length' '0';
             add_header 'Content-Type' 'text/plain';
             add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
             return 200;
@@ -122,6 +127,7 @@ server {
             add_header 'Content-Length' '0';
             add_header 'Content-Type' 'text/plain';
             add_header 'Access-Control-Max-Age' '3628800';
+            add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST';
             add_header 'Access-Control-Allow-Headers' 'DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
             return 200;
